static/bootstrap/custom/quest/_header-footer.scss
/* ... */
.openNav {
	.hamburger {
		a {
			&.navbar-toggle {
				color: $top-link-hover !important;
			}
		}
	}
}

.masthead {
	margin-bottom: 10px;
	.navbar {
		margin-bottom: 0;
		border-bottom: none;
		border-radius: 0;
		z-index: 1000;
		-webkit-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
		-moz-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
		box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
	}
	.navbar-inverse, .navbar-toggle {
		text-shadow: none;
		border: none;
		border-radius: 0;
	}
	.navbar-brand {
		padding: 0;
		margin: 15px 15px 15px 8px;
		a {
			color: $navbar-brand-link-color;
			&:hover {
				text-decoration: none;
			}
		}
	}
	.form-control {
		display: inline;
	}
	.svg-icon-dell {
		margin-left: 10px;
		font-size: 40px;
		color: $svg-icon-dell-color;
		display: inline-block;
		vertical-align: middle;
	}
	.utility {
		margin: 0;
		padding-left: 0;
		float: right;
		i {
			font-size: 22px;
		}
		.search-button {
			span {
				&.top-search-icon {
					display: inline-block;
					height: 22px;
					width: 21px;
				}
			}
			> a:hover {
				&.top-search-icon {
					display: inline-block;
					height: 22px;
					width: 21px;
				}
			}

		}
		li {
			display: inline-block;
			float: left;
			position: relative;
			padding: 0;
			border-left: 1px solid transparent;
			border-right: 1px solid transparent;
			&.open {
				background: $top-search-bg;
				z-index: 9999;
				border-right: 1px solid $top-search-border-color;
				border-left: 1px solid $top-search-border-color;
				height: 68px;
				i, a {
					color: $top-link-hover;
					background: $top-search-bg;
					z-index: 99999;
				}
				i.glyphicon-ok {
					color: $top-user-check-color;
				}
				#lnkMyAccount {
					color: $link-color;
				}
			}
		}
		a {
			margin: 0;
			padding: 22px 9px;
			color: $top-link;
			display: block;
			cursor: pointer;
			position: relative;
			&:link, &:visited {
				margin: 0;
				color: $top-link;
				display: block;
			}
			&:hover {
				text-decoration: none;
				color: $top-link-hover;
				/*background: $top-search-bg;*/
			}
		}

		.badge {
			position: absolute;
			top: 14px;
			left: 15px;
			width: 14px;
			height: 14px;
			display: inline-block;
			min-width: 10px;
			padding: 4px 4px 4px 3px;
			font-size: 6px;
			font-weight: 700;
			color: $badge-color;
			line-height: 0;
			white-space: nowrap;
			text-align: left;
			background-color: $top-badge-bg-color;
			border-radius: 10px;
			i {
				font-size: 8px;
				line-height: 4px;
				margin-left: 0px;
				color: $badge-color;
				background: $top-badge-bg-color !important;
			}
		}
	}
	.navbar-toggle:hover {
		background-color: transparent;
	}
	.main-nav-section {
		position: absolute;
		z-index: 999;
		top: 0;
		right: -276px;
		width: 276px;
		height: 5000px;
		margin-left: 0;
		margin-right: 0;
		padding-left: 0;
		padding-right: 0;
		a {
			display: block;
			padding: 10px 0 9px 20px;
			text-decoration: none;
			color: $top-link;
			&:hover {
				text-decoration: none;
				color: $top-link-hover;
			}
		}
		li {
			list-style-type: none;
		}
		i.nav-arrow {
			float: right;
		}
	}
	.search-container {
		text-align: center;
		display: none;
		position: absolute;
		left: 0;
		margin-top: 68px;
		z-index: 99;
		width: 100%;
		padding: 18px 15px;
		background-color: $top-search-bg;
		-webkit-box-shadow: 0 4px 5px 0 rgba(97, 95, 95, 0.49);
		-moz-box-shadow: 0 4px 5px 0 rgba(97, 95, 95, 0.49);
		box-shadow: 0 4px 5px 0 rgba(97, 95, 95, 0.49);
		border-top: 3px solid $top-search-top-border-color;
		input[type=text] {
			border: 1px solid $top-search-input-border-color;
			font-size: 15px;
			padding: 5px 20px;
			width: 92%;
		}
		&.open {
			display: block;
			+ ul .mobile-search-button {
				background-color: $top-search-bg;
			}
		}
		.search-query {
			padding-right: 14px;
			padding-right: 4px;
			padding-left: 14px;
			padding-left: 4px;
			margin-bottom: 0;
			height: auto;
		}
		.btn {
			font-size: 20px;
			position: absolute;
			top: 18px;
			margin-left: -28px;
			padding: 2px 5px 0px;
			background: $top-search-btn-bg;
			color: $top-search-btn-color;
			border-top-right-radius: 1px;
			border-bottom-right-radius: 1px;
			height: 33px;
			&:hover, &:focus, &.focus {
				color: $top-search-btn-hover-color;
				background: $top-search-btn-hover-bg;
			}
		}

		/*TODO : Where we use this*/

		.autocomplete {
			position: relative;
			z-index: 9999;
			width: 100%;
		}
		.autocomplete-suggestions {
			width: 100%;
			background-color: $white;
			-webkit-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
			-moz-box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
			box-shadow: 0px 3px 5px 0px rgba(170, 170, 170, 0.5);
			margin: 0;
			color: green;
			padding: 10px 0 10px 0;
			line-height: 30px;
			-webkit-transition: transform 500ms ease;
			-moz-transition: transform 500ms ease;
			-ms-transition: transform 500ms ease;
			-o-transition: transform 500ms ease;
			transition: transform 500ms ease;
		}
		.autocomplete-suggestion {
			padding: 0 10px 0 15px;
		}
		.autocomplete-selected {
			background: $autocomplete-selected-bg;
		}

		/*End of TODO*/
	}

	ul {
		&.tier1 {
			padding-left: 0;
			margin: 0;
			li {
				display: block;
				padding: 0;
			}
			ul {
				display: none;
				-webkit-transition: all .3s ease 0s;
				-moz-transition: all .3s ease 0s;
				-o-transition: all .3s ease 0s;
				-ms-transition: all .3s ease 0s;
				transition: all 0.3s ease 0s;
				padding: 0;

				li {
					border-bottom: none;
					overflow: hidden;
				}
			}
			span {
				display: inline-block;
			}
		}
		&.tier2 {
			li.open {
				overflow: visible;
			}
		}
		&.tier3 {
			padding: 0 0 0 15px;

			> li {
				a {
					padding-left: 15px;
				}
			}
		}
		&.tier4 {
			padding: 0 0 0 15px;
		}
	}
}
/* ... */

